<resources>
    <string name="app_name">Week 4 Assignment</string>
    <string name="SIGN_IN">SIGN IN</string>
    <string name="SIGN_OUT">SIGN OUT</string>
    <string name="Welcome_to_app">Welcome to app</string>
    <string name="businesses">3,666 businesses signed up last week</string>
    <string name="Acme">Try Acme free for 30 days</string>
    <string name="Image">phone</string>
    <string name="another">another</string>
    <string name="arrow_button">arrowbutton</string>
</resources>