<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="68.3dp"
            android:background="#F44336"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="66dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/arrow_button"
                app:srcCompat="@drawable/abc_vector_test" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/first_layout"
            android:layout_width="wrap_content"
            android:layout_height="273.3dp"
            android:background="#F44336"
            android:orientation="vertical">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/second_layout"
            android:layout_width="match_parent"
            android:layout_height="410dp"
            android:background="#673AB7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Welcome_to_app"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.605" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/businesses"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/Acme"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:layout_width="205dp"
                android:layout_height="match_parent"
                android:background="#9C27B0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/SIGN_IN"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </Button>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#9C27B0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="205dp"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/SIGN_OUT"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </Button>

        </LinearLayout>

        <!--                <LinearLayout-->
        <!--            android:id="@+id/third_layout"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:background="#9C27B0"-->
        <!--            android:orientation="vertical">-->

        <!--            <TextView-->
        <!--                android:id="@+id/textView"-->
        <!--                android:layout_width="205dp"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:fontFamily="sans-serif"-->
        <!--                android:gravity="center"-->
        <!--                android:text="@string/SIGN_IN"-->
        <!--                android:textAlignment="center"-->
        <!--                android:textColor="#FFFFFF"-->
        <!--                android:textSize="24sp"-->
        <!--                android:textStyle="bold" />-->


        <!--        </LinearLayout>-->

        <!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:background="@color/colorAccent"-->
        <!--            app:menu="@menu/bottom_menu"/>-->


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="269dp"
        android:layout_height="351dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:srcCompat="@drawable/phone"
        android:contentDescription="@string/another" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="640dp" />

</androidx.constraintlayout.widget.ConstraintLayout>